ingress/deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1
  labels:
    app: demo1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo1
  template:
    metadata:
      labels:
        app: demo1
    spec:
      containers:
      - name: node-project1
        image: gopalgtm001/node-demo:v1
        ports:
        - containerPort: 3000
