ingress/deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project2
  labels:
    app: demo2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo2
  template:
    metadata:
      labels:
        app: demo2
    spec:
      containers:
      - name: node-project2
        image: gopalgtm001/node-demo:v2
        ports:
        - containerPort: 4000
