ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /gopal
            pathType: Prefix
            backend:
              service:
                name: project1-service
                port:
                  number: 3000
          - path: /gopal1
            pathType: Prefix
            backend:
              service:
                name: project1-service
                port:
                  number: 3000
          - path: /harishankar
            pathType: Prefix
            backend:
              service:
                name: project2-service
                port:
                  number: 4000
          - path: /harishankar1
            pathType: Prefix
            backend:
              service:
                name: project2-service
                port:
                  number: 4000
